tests/cases/standard-library/errors/prelude/prelude-maybe-removed.ari
fn main() -> i64 {
  let value: Maybe[i64] = Some(1);
  return value ?? 0;
}
